--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -2,7 +2,9 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width"/>
+    @RenderSection("Styles", false)
+    @RenderSection("Scripts", false)
     <title>@ViewBag.Title</title>
 </head>
 <body>
