--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"/>
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     @RenderSection("Styles", false)
     @RenderSection("Scripts", false)
     <title>@ViewBag.Title</title>
