--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -3,7 +3,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width"/>
+    <link href="~/Content/Styles/Site.css" type="text/css" rel="stylesheet"/>
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    
     @RenderSection("Styles", false)
     @RenderSection("Scripts", false)
     <title>@ViewBag.Title</title>
