added login feature

--- a/CursachPrototype/Views/CsDispatcher/Index.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CursachPrototype.ViewModels.ServerSelectionVM
+﻿@model CursachPrototype.ViewModels.ServerSelectionVm
 
 @{
     ViewBag.Title = "Servers";
