--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -1,16 +1,23 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
-    <meta name="viewport" content="width=device-width"/>
+    <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Styles/Site.css" type="text/css" rel="stylesheet"/>
-    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
-    
     @RenderSection("Styles", false)
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     @RenderSection("Scripts", false)
+
     <title>@ViewBag.Title</title>
 </head>
 <body>
+<header>
+  @Html.Partial("_LoginPartial")
+</header>
+<div>
     @RenderBody()
+</div>
+<footer>
+    
+</footer>
 </body>
 </html>
