--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -24,6 +24,13 @@
         </div>
 
         <div>
+            Ваш ник
+            <div>
+                @Html.EditorFor(model => model.NickName)
+            </div>
+        </div>
+
+        <div>
             Пароль
             <div>
                 @Html.EditorFor(model => model.Password)
