--- a/CursachPrototype/Views/Shared/_Layout.cshtml
+++ b/CursachPrototype/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Styles/Site.css" type="text/css" rel="stylesheet"/>
+    <link href="~/Content/Styles/LoginPartial.css" rel="stylesheet" type="text/css">
     @RenderSection("Styles", false)
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     @RenderSection("Scripts", false)
