--- a/CursachPrototype/Views/Shared/_LoginPartial.cshtml
+++ b/CursachPrototype/Views/Shared/_LoginPartial.cshtml
@@ -9,12 +9,8 @@
 else
 {
     <div class="horizontal-container">
-        @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { @class = "item right" })
-        @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "item right" })
+        @Html.ActionLink("Главная", "Index", "Home", routeValues: null, htmlAttributes: new { @class = "item left" })
+        @Html.ActionLink("Регистрация", "Register", "Account", routeValues: null, htmlAttributes: new {@class = "item right"})
+        @Html.ActionLink("Вход", "Login", "Account", routeValues: null, htmlAttributes: new {@class = "item right"})
     </div>
-}
-
-@section Styles
-{
-    <link href="~/Content/Styles/LoginPartial.css" rel="stylesheet" type="text/css">
 }
