Added models to create database without lots of parametrs

--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-            Ваш ник
+            Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных
             <div>
                 @Html.EditorFor(model => model.NickName)
             </div>
