--- a/CursachPrototype/Views/CsDispatcher/Index.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CursachPrototype.ViewModels.ServerSelectionVm
 
 @{
-    ViewBag.Title = "Servers";
+    ViewBag.Title = "Создание БД";
 }
 
 <h2>Выберите необходимую СУБД</h2>
@@ -11,10 +11,15 @@
     <fieldset>
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
+
         @Html.LabelFor(m => m.DataBaseName , "Введите название базы данных")<br/>
         @Html.TextBoxFor(m => m.DataBaseName)
         @Html.ValidationMessageFor(m => m.DataBaseName)
         <br/>
+        @Html.LabelFor(m => m.DataBaseName, "Введите пароль для базы данных")<br />
+        @Html.TextBoxFor(m => m.DataBasePassword)
+        @Html.ValidationMessageFor(m => m.DataBasePassword)
+        <br />
         @foreach (string server in Model.AvailableServers)
         {
             @Html.RadioButtonFor(m => m.SelectedServer, server)
