--- a/CursachPrototype/Views/CsDispatcher/ShowConnectionString.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/ShowConnectionString.cshtml
@@ -23,10 +23,10 @@
 
 
 @section Scripts{
-    <script src="~/Scripts/Popup.js"></script>
-    <script src="~/Scripts/CopyToClipboard.js"></script>
+    <script src="@Url.Content("~/Scripts/Popup.js")"></script>
+    <script src="@Url.Content("~/Scripts/CopyToClipboard.js")"></script>
 }
 
 @section Styles{
-    <link href="~/Content/Styles/Popup.css" rel="stylesheet" type="text/css">
+    <link href="@Url.Content("~/Content/Styles/Popup.css")" rel="stylesheet" type="text/css">
 }
