--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -14,5 +14,5 @@
 </div>
 
 @section Styles{
-    <link href="~/Content/Styles/LandingPage.css" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/Styles/LandingPage.css")" rel="stylesheet" type="text/css" />
 }
