--- a/CursachPrototype/Views/UserRoom/Index.cshtml
+++ b/CursachPrototype/Views/UserRoom/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<CursachPrototype.Models.DataBaseInfo>
+﻿@model IList<CursachPrototype.Models.Accounting.DataBaseInfo>
 
 @{
     ViewBag.Title = "Личный кабинет";
