--- a/CursachPrototype/Views/UserRoom/Delete.cshtml
+++ b/CursachPrototype/Views/UserRoom/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CursachPrototype.Models.DataBaseInfo
+﻿@model CursachPrototype.Models.Accounting.DataBaseInfo
 
 @{
     ViewBag.Title = "Подтвердите удаление";
