Added immediate login, fieldsets

--- a/CursachPrototype/Views/Account/Login.cshtml
+++ b/CursachPrototype/Views/Account/Login.cshtml
@@ -9,19 +9,23 @@
 
 @using (Html.BeginForm("Login", "Account"))
 {
-    @Html.AntiForgeryToken()
+    <fieldset>
+        @Html.AntiForgeryToken()
 
-    <div>
-        @Html.ValidationSummary()
-        <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
-        <p>
-            <label>Email</label><br />
-            @Html.EditorFor(x => x.Email)
-        </p>
-        <p>
-            <label>Пароль</label><br />
-            @Html.EditorFor(x => x.Password)
-        </p>
-        <p><button type="submit">Войти</button></p>
-    </div>
+        <div>
+            @Html.ValidationSummary()
+            <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
+            <p>
+                <label>Email</label><br />
+                @Html.EditorFor(x => x.Email)
+            </p>
+            <p>
+                <label>Пароль</label><br />
+                @Html.EditorFor(x => x.Password)
+            </p>
+            <p>
+                <button type="submit">Войти</button>
+            </p>
+        </div>
+    </fieldset>
 }
