--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -9,45 +9,47 @@
 
 @using (Html.BeginForm("Register", "Account"))
 {
+  
     @Html.AntiForgeryToken()
-
-    <div>
-        <h4>Регистрация пользователя</h4>
-        <hr />
-        @Html.ValidationSummary(false)
-
+    <fieldset>
         <div>
-            Электронный адрес
+            <h4>Регистрация пользователя</h4>
+            <hr />
+            @Html.ValidationSummary(false)
+
             <div>
-                @Html.EditorFor(model => model.Email)
+                Электронный адрес
+                <div>
+                    @Html.EditorFor(model => model.Email)
+                </div>
+            </div>
+
+            <div>
+                Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных
+                <div>
+                    @Html.EditorFor(model => model.NickName)
+                </div>
+            </div>
+
+            <div>
+                Пароль
+                <div>
+                    @Html.EditorFor(model => model.Password)
+                </div>
+            </div>
+
+            <div>
+                Подтвердить пароль
+                <div>
+                    @Html.EditorFor(model => model.PasswordConfirm)
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <input type="submit" value="Зарегистрировать" />
+                </div>
             </div>
         </div>
-
-        <div>
-            Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных
-            <div>
-                @Html.EditorFor(model => model.NickName)
-            </div>
-        </div>
-
-        <div>
-            Пароль
-            <div>
-                @Html.EditorFor(model => model.Password)
-            </div>
-        </div>
-
-        <div>
-            Подтвердить пароль
-            <div>
-                @Html.EditorFor(model => model.PasswordConfirm)
-            </div>
-        </div>
-
-        <div>
-            <div>
-                <input type="submit" value="Зарегистрировать" />
-            </div>
-        </div>
-    </div>
+    </fieldset>
 }
