--- a/CursachPrototype/Views/Home/Index.cshtml
+++ b/CursachPrototype/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "index";
+    ViewBag.Title = "Добро пожаловать";
 }
 <div class="wrapper">
     <div class="rowElement left-option">
@@ -9,7 +9,7 @@
         @Html.ActionLink("Получить строку подключения", "Index", "CsDispatcher")
     </div>
     <div class="rowElement right-option">
-        @Html.ActionLink("Получить строку подключения", "Index", "CsDispatcher")
+        @Html.ActionLink("Получить строку подключения анонимно", "IndexAnonymous", "CsDispatcher")
     </div>
 </div>
 
