Half way to anon db

--- a/CursachPrototype/Views/CsDispatcher/IndexAnonymous.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/IndexAnonymous.cshtml
@@ -17,7 +17,7 @@
         @Html.ValidationMessageFor(m => m.DataBaseName)
         <br/>
 
-        @Html.LabelFor(m => m.StoreHours, "Время жизни базы данных (в днях)")<br />
+        @Html.LabelFor(m => m.StoreHours, "Время жизни базы данных (в часах)")<br />
         @Html.EditorFor(m => m.StoreHours)
         @Html.ValidationMessageFor(m => m.StoreHours)
         <br />
