--- a/CursachPrototype/Views/UserRoom/Index.cshtml
+++ b/CursachPrototype/Views/UserRoom/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Optimization
-@model IList<CursachPrototype.Models.Accounting.DataBaseInfo>
+﻿@model IList<CursachPrototype.Models.Accounting.DataBaseInfo>
 
 @{
     ViewBag.Title = "Личный кабинет";
