--- a/CursachPrototype/Views/DisplayTable/EditRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/EditRow.cshtml
@@ -8,9 +8,9 @@
 else
 {
     @:<fieldset>
-        using (Ajax.BeginForm("UploadChanges", "DisplayTable", new AjaxOptions { UpdateTargetId = "report" }))
+        using (Html.BeginForm("UploadChanges", "DisplayTable", FormMethod.Post))
     {
-
+        @Html.ValidationSummary()
         for (int i = 0; i < Model.ItemArray.Length; i++)
         {
             var columnInfo = Model.Table.Columns[i];
@@ -19,11 +19,18 @@ else
             if (String.Compare(columnInfo.ColumnName, "ID") == 0)
             {
                 <p>@Html.Label(columnInfo.ColumnName) &nbsp;&nbsp;&nbsp;&nbsp; @itemValue</p>
+                <input type="hidden" name="ID" value="@itemValue"/>
                 continue;
             }
 
             @Html.Label(columnInfo.ColumnName + "\t") @: &nbsp; &nbsp; &nbsp; &nbsp;
-        if (columnInfo.DataType == typeof(int) || columnInfo.DataType == typeof(int?))
+            if (columnInfo.DataType == typeof(int))
+            {
+                int temp = (int)itemValue;
+                <input type="number" name="@columnInfo.ColumnName" value="@temp" />
+            }
+
+            if (columnInfo.DataType == typeof(int?))
             {
                 int? temp = (int?)itemValue;
                 <input type="number" name="@columnInfo.ColumnName" value="@temp" />
@@ -40,13 +47,6 @@ else
         <input type="submit" />
     }
     @:</fieldset>
-}
-
-<div id="report"></div>
-
-
-@section Scripts{
-    <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
 }
 
 
