Implemented selecting db and table for editing

--- a/CursachPrototype/Views/UserRoom/Index.cshtml
+++ b/CursachPrototype/Views/UserRoom/Index.cshtml
@@ -49,6 +49,9 @@
                     <td>
                         @Ajax.ActionLink("Запрос", "ExecuteQuery", new {item.Id}, new AjaxOptions {UpdateTargetId = "queryExecutor"})
                     </td>
+                    <td>
+                        @Html.ActionLink("Редактировать", "Index", "DisplayTable", new { dbId = item.Id, userId = ViewBag.UserId}, null)
+                    </td>
                 </tr>
             }
         </table>
