--- a/CursachPrototype/Views/DisplayTable/Index.cshtml
+++ b/CursachPrototype/Views/DisplayTable/Index.cshtml
@@ -1,48 +1,30 @@
-﻿@using System.Data
-@model System.Data.DataTable
+﻿@model SelectListItem[]
 
 @{
-    ViewBag.Title = "Просмотр таблицы";
+    ViewBag.Title = "Редактировани базы данных";
 }
 
-<h2>@ViewBag.StatusMessage</h2>
-<div class="horizontal-container">
-    <div class="left">
-        <table>
-            <thead>
-            <tr>
-                @foreach (DataColumn dc in Model.Columns)
-                {
-                    <th>@dc.ColumnName</th>
-                }
-            </tr>
-            </thead>
-            <tbody>
-            @foreach (DataRow dr in Model.Rows)
-            {
-                <tr>
-                    @foreach (object item in dr.ItemArray)
-                    {
-                        <td>@item.ToString()</td>
-                    }
-                    <td>
-                        @Ajax.ActionLink("Редактировать", "Edit", new {id = dr[Model.Columns["ID"]].ToString()}, new AjaxOptions {UpdateTargetId = "ajax" })
-                    </td>
-                    <td>
-                      @Ajax.ActionLink("Удалить", "Delete", new { id = dr[Model.Columns["ID"]].ToString() }, new AjaxOptions { UpdateTargetId = "ajax" })
-                    </td>
-                </tr>
-            }
-            </tbody>
-        </table>
+<h2>Редактировани базы данных @ViewBag.DbName</h2>
+@{
+    if (ViewBag.NoElements as bool? == true)
+    {
+        <b style="color: red;">База данных пуста</b>
+    }
+    else
+    {
+        using (Ajax.BeginForm("EditTable", new AjaxOptions { UpdateTargetId = "editor", HttpMethod = "Get" }))
+        {
+            <fieldset>
+                <p>Выберите таблицу для изменения</p>
+                @Html.DropDownList("SelectedTable", new SelectList(@Model, "Value", "Text", null))
+                <br />
+                <button>Выбрать таблицу</button>
+            </fieldset>
+        }
+    }
+}
 
-        <br/>
-        <hr/>
-    </div>
-
-    <div class="left" id="ajax">
-    </div>
-</div>
+<div id="editor"></div>
 
 @section Scripts{
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.min.js")"></script>
