--- a/CursachPrototype/Views/DisplayTable/AddRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddRow.cshtml
@@ -9,7 +9,7 @@
 else
 {
     @:<fieldset>
-        using (Html.BeginForm("UploadChanges", "DisplayTable", FormMethod.Post))
+        using (Html.BeginForm("UploadNewRow", "DisplayTable", FormMethod.Post))
     {
         @Html.ValidationSummary()
         for (int i = 0; i < Model.ItemArray.Length; i++)
