--- a/CursachPrototype/Views/DisplayTable/AddRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddRow.cshtml
@@ -15,7 +15,7 @@ else
         for (int i = 0; i < Model.ItemArray.Length; i++)
         {
             var columnInfo = Model.Table.Columns[i];
-            var itemValue = Model.ItemArray[i];
+            object itemValue = Model.ItemArray[i];
 
             if (columnInfo.ColumnName.ContainsIgnoreCase("ID"))
             {
@@ -27,15 +27,17 @@ else
             @Html.Label(columnInfo.ColumnName + "\t") @: &nbsp; &nbsp; &nbsp; &nbsp;
             if (columnInfo.DataType == typeof(int))
             {
-                <input type="number" name="@columnInfo.ColumnName"/>
-            }
-
-            if (columnInfo.DataType == typeof(int?))
-            {;
                 <input type="number" name="@columnInfo.ColumnName" />
             }
-
-            if (columnInfo.DataType == typeof(string))
+            else if (columnInfo.DataType == typeof(double))
+            {
+                <input type="number" step="0.00001" name="@columnInfo.ColumnName" />
+            }
+            else if (columnInfo.DataType == typeof(DateTime))
+            {
+                <input type="datetime-local" name="@columnInfo.ColumnName"/>
+            }
+            else
             {
                 <input type="text" name="@columnInfo.ColumnName" />
             }
