--- a/CursachPrototype/Views/DisplayTable/EditRow.cshtml
+++ b/CursachPrototype/Views/DisplayTable/EditRow.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Data
+@using System.Xml
 @using CursachPrototype.ExtensionMethods
 @model DataRow
 
@@ -15,7 +16,7 @@ else
         for (int i = 0; i < Model.ItemArray.Length; i++)
         {
             var columnInfo = Model.Table.Columns[i];
-            var itemValue = Model.ItemArray[i];
+            object itemValue = Model.ItemArray[i];
 
             if (columnInfo.ColumnName.ContainsIgnoreCase("ID"))
             {
@@ -30,17 +31,19 @@ else
                 int temp = (int)itemValue;
                 <input type="number" name="@columnInfo.ColumnName" value="@temp" />
             }
-
-            if (columnInfo.DataType == typeof(int?))
+            else if (columnInfo.DataType == typeof(double))
             {
-                int? temp = (int?)itemValue;
-                <input type="number" name="@columnInfo.ColumnName" value="@temp" />
+                double temp = (double)itemValue;
+                <input type="number" name="@columnInfo.ColumnName" step="0.00001" value="@temp.ToString("##.#####")" />
             }
-
-            if (columnInfo.DataType == typeof(string))
+            else if(columnInfo.DataType == typeof(DateTime))
             {
-                string temp = (string)itemValue;
-                <input type="text" name="@columnInfo.ColumnName" value="@temp" />
+                DateTime dt = (DateTime)itemValue;
+                <input type="datetime-local" name="@columnInfo.ColumnName" value="@XmlConvert.ToString(dt, XmlDateTimeSerializationMode.Unspecified)"/>
+            }
+            else
+            {
+                <input type="text" name="@columnInfo.ColumnName" value="@itemValue.ToString()" />
             }
             <br />
         }
